[project]
name = "genai-workshop"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Mario Zechner", email = "badlogicgames@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "genai_workshop:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/genai_workshop"]
