[project]
name = "genai-workshop"
version = "1.0.0"
description = "Code for the Generative AI Workshop, 26.2.2024"
authors = [
    { name = "Mario Zechner", email = "mario@badlogicgames.com" }
]
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.37.2",
    "umap-learn>=0.5.5",
    "matplotlib>=3.7.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
01_supervised = "genai_workshop.genai_01_supervised_learning:main"
02_unsupervised = "genai_workshop.genai_02_unsupervised_learning:main"
03_embeddings = "genai_workshop.genai_03_unsupervised_learning_embeddings:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/genai_workshop"]
